<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">

    <android.support.v7.widget.CardView
        style="@style/cardview"
        android:layout_marginRight="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/department_type"
                android:text="@string/type_secy"
                android:id="@+id/secy1"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/secy1_image"
                style="@style/circle_imageview"
                android:layout_below="@+id/secy1"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/secy1_image"
                android:layout_toRightOf="@+id/secy1_image"
                android:layout_below="@id/secy1">
                <TextView
                    style="@style/profile_name"
                    android:text="@string/secy1_name"
                    android:id="@+id/secy1_name" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/secy1_name"
                    android:src="@drawable/ic_email_black_24dp"
                    android:id="@+id/mail_secy1" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/secy1_name"
                    android:layout_toEndOf="@+id/mail_secy1"
                    android:layout_toRightOf="@+id/mail_secy1"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:id="@+id/phone_secy1"
                    />


            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/cardview">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/department_type"
                android:text="@string/type_secy"
                android:id="@+id/secy2"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/secy2_image"
                style="@style/circle_imageview"
                android:layout_below="@+id/secy2"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/secy2_image"
                android:layout_toRightOf="@+id/secy2_image"
                android:layout_below="@id/secy2">
                <TextView
                    style="@style/profile_name"
                    android:text="@string/secy2_name"
                    android:id="@+id/secy2_name" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/secy2_name"
                    android:src="@drawable/ic_email_black_24dp"
                    android:id="@+id/mail_secy2" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/secy2_name"
                    android:layout_toEndOf="@+id/mail_secy2"
                    android:layout_toRightOf="@+id/mail_secy2"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:id="@+id/phone_secy2"
                    />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>