<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">

    <android.support.v7.widget.CardView
        style="@style/cardview"
        android:layout_marginRight="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/department_type"
                android:text="@string/type_finance"
                android:id="@+id/finance1"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/finance1_image"
                style="@style/circle_imageview"
                android:layout_below="@+id/finance1"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/finance1_image"
                android:layout_toRightOf="@+id/finance1_image"
                android:layout_below="@id/finance1">
                <TextView
                    style="@style/profile_name"
                    android:text="@string/finance1_name"
                    android:id="@+id/finance1_name" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/finance1_name"
                    android:src="@drawable/ic_email_black_24dp"
                    android:id="@+id/mail_finance1" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/finance1_name"
                    android:layout_toEndOf="@+id/mail_finance1"
                    android:layout_toRightOf="@+id/mail_finance1"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:id="@+id/phone_finance1"
                    />


            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/cardview">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/department_type"
                android:text="@string/type_finance"
                android:id="@+id/finance2"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/finance2_image"
                style="@style/circle_imageview"
                android:layout_below="@+id/finance2"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/finance2_image"
                android:layout_toRightOf="@+id/finance2_image"
                android:layout_below="@id/finance2">
                <TextView
                    style="@style/profile_name"
                    android:text="@string/finance2_name"
                    android:id="@+id/finance2_name" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/finance2_name"
                    android:src="@drawable/ic_email_black_24dp"
                    android:id="@+id/mail_finance2" />

                <ImageButton
                    style="@style/image_button"
                    android:layout_below="@+id/finance2_name"
                    android:layout_toEndOf="@+id/mail_finance2"
                    android:layout_toRightOf="@+id/mail_finance2"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:id="@+id/phone_finance2"
                    />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>